mid commit with desktop layout andadded navbar functionality with javascript

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="nav-left">
           <img src="./images/icon-menu.svg" alt="menu" class="menu-btn">
           <img src="./images/logo.svg" alt="" class="logo">
-          <div class="overlay"></div>
+          <div class="backdrop"></div>
           <ul class="nav-links">
-            <img src="./images/icon-close.svg" alt="">
+            <img src="./images/icon-close.svg" alt="" class="close-btn">
             <li class="nav-items"><a href="#">Collections</a></li>
             <li class="nav-items"><a href="#">Men</a></li>
             <li class="nav-items"><a href="#">Women</a></li>
@@ -56,8 +56,68 @@
         </div>
       </nav>
     </header>
+    <hr>
     <main>
-
+      <div class="page-content">
+        <div class="page-image">
+          <div class="main-img">
+            <div class="active">
+              <img src="/images/image-product-1.jpg" alt="">
+            </div>
+            <div>
+              <img src="/images/image-product-2.jpg" alt="">
+            </div>
+            <div>
+              <img src="/images/image-product-3.jpg" alt="">
+            </div>
+            <div>
+              <img src="/images/image-product-4.jpg" alt="">
+            </div>
+          </div>
+          <div class="thumb-img">
+            <div>
+              <img src="/images/image-product-1-thumbnail.jpg" alt="" class="active">
+            </div>
+            <div>
+              <img src="/images/image-product-2-thumbnail.jpg" alt="">
+            </div>
+            <div>
+              <img src="/images/image-product-3-thumbnail.jpg" alt="">
+            </div>
+            <div>
+              <img src="/images/image-product-4-thumbnail.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="page-texts">
+          <h3>SNEAKER COMPANY</h3>
+          <h1>Fall Limited Edition Sneakers</h1>
+          <p>These low-profile sneakers are your perfect casual wear companion. Featuring a
+            durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+          <div class="price-section">
+            <div class="new-price">
+              <h2>$125.00</h2>
+              <span>50%</span>
+            </div>
+            <div class="old-price">
+              <h4>$250.00</h4>
+            </div>
+          </div>
+          <div class="cart-add">
+            <div class="quantity">
+              <img src="/images/icon-plus.svg" alt="">
+              <span>0</span>
+              <img src="/images/icon-minus.svg" alt="">
+            </div>
+            <div class="lower-cart">
+              <button class="lower-cart-btn">
+                <img src="/images/icon-cart.svg" alt="">
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </div>
 
